# hyperfetch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  downloader.rs  lib.rs  main.rs  models.rs  utils.rs
