[package]
name = "hyperfetch"
version = "0.1.3"
edition = "2024"
authors = ["Tarush Mohindru <tarushmohindru1515@gmail.com>"]
description = "A superfast multithreaded downloader"
license = "MIT"
repository = "https://github.com/tarushmohindru/hyperfetch"
keywords = [
    "downloader",
    "multithreaded",
    "fast",
    "async",
    "high-speed",
    "high-performance",
]
categories = ["Command-line utilities", "Networking", "File transfer"]

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.16.0"
indicatif = "0.18.0"
infer = "0.19.0"
reqwest = { version = "0.12.23", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "stream",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
